@@ -1,5 +1,8 @@
 1999-06-12  Ian Lance Taylor  <ian@zembu.com>
 
+	* ar.c (O_BINARY): Define as 0 if not defined.
+	(ranlib_touch): Open file with O_BINARY.
+
 	* rename.c (O_BINARY): Define as 0 if not defined.
 	(simple_copy): Open files with O_BINARY.
 
